# FTAgent

./: pyproject.toml
browser_data_collection/: browser_activity_20250618_205339.json  browser_activity_20250619_191359.json
logs/: sysmon_logs.json
mcp/: hrkill_mcp.py  huorong_mcp.py
